--- a/src/sass/components/school/_dashboard.scss
+++ b/src/sass/components/school/_dashboard.scss
@@ -1,442 +1,263 @@
 .dashboard__title {
-    font-size: 64px;
-    margin-top: 40px;
+  font-size: 64px;
+  margin-top: 40px;
 }
 
 .dashboard__box {
-    margin-top: 100px;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .dashboard__box__description {
-    width: 438px;
-    margin-left: 31px;
+  width: 438px;
+  margin-left: 31px;
 }
 
 .dashboard__footer {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    right: 0;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  right: 0;
 }
 
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(5px);
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(5px);
 }
 
-
-
 .modal-content {
-    background-color: #fefefe;
-    margin: 10% auto;
-    padding: 20px;
-    border-radius: 10px;
-    width: 60%;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 10px;
+  width: 60%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
-    .dashboard__title {
-        font-size: 18px;
-        margin-top: 20px;
-    }
+  .dashboard__title {
+      font-size: 18px;
+      margin-top: 20px;
+  }
 
-    .dashboard__box {
-        margin-top: 30px;
-        
-    }
+  .dashboard__box {
+      margin-top: 30px;
+  }
 
-    .dashboard__box__description {
-        display: none;
-        margin-left: 0;
-        margin-top: 20px;
-        padding: 0 10px;
-    }
+  .dashboard__box__description {
+      display: none;
+      margin-left: 0;
+      margin-top: 20px;
+      padding: 0 10px;
+  }
 
-    .modal-content {
-        width: 90%;
-        padding: 15px;
-    }
+  .modal-content {
+      width: 90%;
+      padding: 15px;
+  }
 }
 
 *, *:before, *:after {
-    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-    }
-    
-  
-    
-    #calendar {
-      -webkit-transform: translate3d(0, 0, 0);
-      -moz-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0);
-      height: 570px;
-      width: 1440px;
-      overflow: hidden;
-      border-radius: 20px;
-    }
-    
-    .calendarr{
-        display: flex;
-    }
-   
-    
-    .left {
-      border-width: 7.5px 10px 7.5px 0;
-      border-color: transparent rgba(160, 159, 160, 1) transparent transparent;
-      left: 20px;
-    }
-    
-    .right {
-      border-width: 7.5px 0 7.5px 10px;
-      border-color: transparent transparent transparent rgba(160, 159, 160, 1);
-      right: 20px;
-    }
-    
-    .month {
-      /*overflow: hidden;*/
-      opacity: 0;
-    }
-    
-    .month.new {
-      -webkit-animation: fadeIn 1s ease-out;
-      opacity: 1;
-    }
-    
-    .month.in.next {
-      -webkit-animation: moveFromTopFadeMonth .4s ease-out;
-      -moz-animation: moveFromTopFadeMonth .4s ease-out;
-      animation: moveFromTopFadeMonth .4s ease-out;
-      opacity: 1;
-    }
-    
-    .month.out.next {
-      -webkit-animation: moveToTopFadeMonth .4s ease-in;
-      -moz-animation: moveToTopFadeMonth .4s ease-in;
-      animation: moveToTopFadeMonth .4s ease-in;
-      opacity: 1;
-    }
-    
-    .month.in.prev {
-      -webkit-animation: moveFromBottomFadeMonth .4s ease-out;
-      -moz-animation: moveFromBottomFadeMonth .4s ease-out;
-      animation: moveFromBottomFadeMonth .4s ease-out;
-      opacity: 1;
-    }
-    
-    .month.out.prev {
-      -webkit-animation: moveToBottomFadeMonth .4s ease-in;
-      -moz-animation: moveToBottomFadeMonth .4s ease-in;
-      animation: moveToBottomFadeMonth .4s ease-in;
-      opacity: 1;
-    }
-    
-    .week {
-        border-radius: 10px;
-     background: #4A4A4A;
-     gap: 20px;
-    }
-    
-    .day {
-        margin-left: 120px;
-      display: inline-block;
-      width: 60px;
-      padding: 10px;
-      text-align: center;
-      vertical-align: top;
-      cursor: pointer;
-      background: #4A4A4A;
-      position: relative;
-      z-index: 100;
-    }
-    
-    .day.other {
-     color: rgba(255, 255, 255, .3);
-    }
-    
-    .day.today {
-      color: rgba(156, 202, 235, 1);
-    }
-    
-    .day-name {
-      font-size: 9px;
-      text-transform: uppercase;
-      margin-bottom: 5px;
-      color: rgba(255, 255, 255, .5);
-      letter-spacing: .7px;
-    }
-    
-    .day-number {
-      font-size: 24px;
-      letter-spacing: 1.5px;
-    }
-    
-    
-    .day .day-events {
-      list-style: none;
-      margin-top: 3px;
-      text-align: center;
-      height: 12px;
-      line-height: 6px;
-      overflow: hidden;
-    }
-    
-    .day .day-events span {
-      vertical-align: top;
-      display: inline-block;
-      padding: 0;
-      margin: 0;
-      width: 5px;
-      height: 5px;
-      line-height: 5px;
-      margin: 0 1px;
-    }
-    
-    .blue { background: rgba(156, 202, 235, 1); }
-    .orange { background: rgba(247, 167, 0, 1); }
-    .green { background: rgba(153, 198, 109, 1); }
-    .yellow { background: rgba(249, 233, 0, 1); }
-    
-    .details {
-      position: relative;
-      width: 420px;
-      height: 75px;
-      background: rgba(164, 164, 164, 1);
-      margin-top: 5px;
-      border-radius: 4px;
-    }
-    
-    .details.in {
-        width: 1440px;
-        height: 130px;
-      -webkit-animation: moveFromTopFade .5s ease both;
-      -moz-animation: moveFromTopFade .5s ease both;
-      animation: moveFromTopFade .5s ease both;
-    }
-    
-    .details.out {
-      -webkit-animation: moveToTopFade .5s ease both;
-      -moz-animation: moveToTopFade .5s ease both;
-      animation: moveToTopFade .5s ease both;
-    }
-    
-    .arrow {
-      position: absolute;
-      top: -5px;
-      left: 50%;
-      margin-left: -2px;
-      width: 0px;
-      height: 0px;
-      border-style: solid;
-      border-width: 0 5px 5px 5px;
-      border-color: transparent transparent rgba(164, 164, 164, 1) transparent;
-      transition: all 0.7s ease;
-    }
-    
-    .events {
-        border-radius: 10px;
-      height: 75px;
-      padding: 7px 0;
-      overflow-y: auto;
-      overflow-x: hidden;
-    }
-    
-    .events.in {
-        border-radius: 10px;
-        height: 130px;
-      -webkit-animation: fadeIn .3s ease both;
-      -moz-animation: fadeIn .3s ease both;
-      animation: fadeIn .3s ease both;
-    }
-    
-    .events.in {
-        border-radius: 10px;
-      -webkit-animation-delay: .3s;
-      -moz-animation-delay: .3s;
-      animation-delay: .3s;
-    }
-    
-    .details.out .events {
-      -webkit-animation: fadeOutShrink .4s ease both;
-      -moz-animation: fadeOutShink .4s ease both;
-      animation: fadeOutShink .4s ease both;
-    }
-    
-    .events.out {
-      -webkit-animation: fadeOut .3s ease both;
-      -moz-animation: fadeOut .3s ease both;
-      animation: fadeOut .3s ease both;
-    }
-    
-    .event {
-      font-size: 16px;
-      line-height: 22px;
-      letter-spacing: .5px;
-      padding: 2px 16px;
-      vertical-align: top;
-    }
-    
-    .event.empty {
-      color: #eee;
-    }
-    
-    .event-category {
-      height: 10px;
-      width: 10px;
-      display: inline-block;
-      margin: 6px 0 0;
-      vertical-align: top;
-    }
-    
-    .event span {
-      display: inline-block;
-      padding: 0 0 0 7px;
-    }
-    
-    .legend {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      height: 30px;
-      background: rgba(60, 60, 60, 1);
-      line-height: 30px;
-      z-index: 1000;
-    }
-    
-    .entry {
-      position: relative;
-      padding: 0 0 0 25px;
-      font-size: 13px;
-      display: inline-block;
-      line-height: 30px;
-      background: transparent;
-    }
-    
-    .entry:after {
-      position: absolute;
-      content: '';
-      height: 5px;
-      width: 5px;
-      top: 12px;
-      left: 14px;
-    }
-    
-    .entry.blue:after { background: rgba(156, 202, 235, 1); }
-    .entry.orange:after { background: rgba(247, 167, 0, 1); }
-    .entry.green:after { background: rgba(153, 198, 109, 1); }
-    .entry.yellow:after { background: rgba(249, 233, 0, 1); }
-    
-    /* Animations are cool!  */
-    @-webkit-keyframes moveFromTopFade {
-      from { opacity: .3; height:0px; margin-top:0px; -webkit-transform: translateY(-100%); }
-    }
-    @-moz-keyframes moveFromTopFade {
-      from { height:0px; margin-top:0px; -moz-transform: translateY(-100%); }
-    }
-    @keyframes moveFromTopFade {
-      from { height:0px; margin-top:0px; transform: translateY(-100%); }
-    }
-    
-    @-webkit-keyframes moveToTopFade {
-      to { opacity: .3; height:0px; margin-top:0px; opacity: 0.3; -webkit-transform: translateY(-100%); }
-    }
-    @-moz-keyframes moveToTopFade {
-      to { height:0px; -moz-transform: translateY(-100%); }
-    }
-    @keyframes moveToTopFade {
-      to { height:0px; transform: translateY(-100%); }
-    }
-    
-    @-webkit-keyframes moveToTopFadeMonth {
-      to { opacity: 0; -webkit-transform: translateY(-30%) scale(.95); }
-    }
-    @-moz-keyframes moveToTopFadeMonth {
-      to { opacity: 0; -moz-transform: translateY(-30%); }
-    }
-    @keyframes moveToTopFadeMonth {
-      to { opacity: 0; -moz-transform: translateY(-30%); }
-    }
-    
-    @-webkit-keyframes moveFromTopFadeMonth {
-      from { opacity: 0; -webkit-transform: translateY(30%) scale(.95); }
-    }
-    @-moz-keyframes moveFromTopFadeMonth {
-      from { opacity: 0; -moz-transform: translateY(30%); }
-    }
-    @keyframes moveFromTopFadeMonth {
-      from { opacity: 0; -moz-transform: translateY(30%); }
-    }
-    
-    @-webkit-keyframes moveToBottomFadeMonth {
-      to { opacity: 0; -webkit-transform: translateY(30%) scale(.95); }
-    }
-    @-moz-keyframes moveToBottomFadeMonth {
-      to { opacity: 0; -webkit-transform: translateY(30%); }
-    }
-    @keyframes moveToBottomFadeMonth {
-      to { opacity: 0; -webkit-transform: translateY(30%); }
-    }
-    
-    @-webkit-keyframes moveFromBottomFadeMonth {
-      from { opacity: 0; -webkit-transform: translateY(-30%) scale(.95); }
-    }
-    @-moz-keyframes moveFromBottomFadeMonth {
-      from { opacity: 0; -webkit-transform: translateY(-30%); }
-    }
-    @keyframes moveFromBottomFadeMonth {
-      from { opacity: 0; -webkit-transform: translateY(-30%); }
-    }
-    
-    @-webkit-keyframes fadeIn  {
-      from { opacity: 0; }
-    }
-    @-moz-keyframes fadeIn  {
-      from { opacity: 0; }
-    }
-    @keyframes fadeIn  {
-      from { opacity: 0; }
-    }
-    
-    @-webkit-keyframes fadeOut  {
-      to { opacity: 0; }
-    }
-    @-moz-keyframes fadeOut  {
-      to { opacity: 0; }
-    }
-    @keyframes fadeOut  {
-      to { opacity: 0; }
-    }
-    
-    @-webkit-keyframes fadeOutShink  {
-      to { opacity: 0; padding: 0px; height: 0px; }
-    }
-    @-moz-keyframes fadeOutShink  {
-      to { opacity: 0; padding: 0px; height: 0px; }
-    }
-    @keyframes fadeOutShink  {
-      to { opacity: 0; padding: 0px; height: 0px; }
-    }
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box; 
+  box-sizing: border-box;
+}
+.calendar-container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f5f5f5;
+}
+
+.calendar-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.calendar-button {
+  background-color: #2D9CDB;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.calendar-button:hover {
+  background-color: #1e7bcf;
+}
+
+.calendar-title {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.calendar-month {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.calendar-days {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  gap: 5px;
+}
+
+.calendar-day {
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.calendar-day:hover {
+  background-color: #e0e0e0;
+}
+
+.event-list {
+  margin-top: 20px;
+}
+
+.event {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ddd;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.event:last-child {
+  border-bottom: none;
+}
+
+.event-date {
+  font-weight: bold;
+  margin-right: 10px;
+  color: #333;
+}
+
+.event-title {
+  flex: 1;
+  color: #333;
+}
+
+.delete-event {
+  background-color: #e74c3c;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.delete-event:hover {
+  background-color: #c0392b;
+}
+
+.event-form-container {
+  margin-top: 20px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.event-form label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.event-form input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.event-form button {
+  background-color: #2D9CDB;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.event-form button:hover {
+  background-color: #1e7bcf;
+}
+
+@media (max-width: 600px) {
+  .calendar-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .calendar-button {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  .calendar-title {
+    font-size: 16px;
+  }
+
+  .calendar-days {
+    grid-template-columns: repeat(7, 1fr);
+  }
+
+  .calendar-day {
+    padding: 8px;
+    font-size: 14px;
+  }
+
+  .event {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .event-date {
+    margin-bottom: 5px;
+  }
+
+  .event-form-container {
+    padding: 15px;
+  }
+
+  .event-form button {
+    font-size: 14px;
+    padding: 8px;
+  }
+}
